; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_comboex.c_COMBOEX_NotifyDragBegin.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_comboex.c_COMBOEX_NotifyDragBegin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64 }
%struct.TYPE_6__ = type { i32, i32, i32 }
%struct.TYPE_7__ = type { i32, i32, i32 }

@CBEMAXSTRLEN = common dso_local global i32 0, align 4
@CBEN_DRAGBEGINW = common dso_local global i32 0, align 4
@CP_ACP = common dso_local global i32 0, align 4
@CBEN_DRAGBEGINA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_8__*, i32)* @COMBOEX_NotifyDragBegin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @COMBOEX_NotifyDragBegin(%struct.TYPE_8__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__, align 4
  %6 = alloca %struct.TYPE_7__, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %22

11:                                               ; preds = %2
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  store i32 -1, i32* %12, align 4
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* @CBEMAXSTRLEN, align 4
  %17 = call i32 @lstrcpynW(i32 %14, i32 %15, i32 %16)
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %19 = load i32, i32* @CBEN_DRAGBEGINW, align 4
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 1
  %21 = call i32 @COMBOEX_Notify(%struct.TYPE_8__* %18, i32 %19, i32* %20)
  br label %34

22:                                               ; preds = %2
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 0
  store i32 -1, i32* %23, align 4
  %24 = load i32, i32* @CP_ACP, align 4
  %25 = load i32, i32* %4, align 4
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 2
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* @CBEMAXSTRLEN, align 4
  %29 = call i32 @WideCharToMultiByte(i32 %24, i32 0, i32 %25, i32 -1, i32 %27, i32 %28, i32 0, i32 0)
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %31 = load i32, i32* @CBEN_DRAGBEGINA, align 4
  %32 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 1
  %33 = call i32 @COMBOEX_Notify(%struct.TYPE_8__* %30, i32 %31, i32* %32)
  br label %34

34:                                               ; preds = %22, %11
  ret void
}

declare dso_local i32 @lstrcpynW(i32, i32, i32) #1

declare dso_local i32 @COMBOEX_Notify(%struct.TYPE_8__*, i32, i32*) #1

declare dso_local i32 @WideCharToMultiByte(i32, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
